--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/back_button"
         style="@style/PrettyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/greybutton"
         android:text="@string/about_back_button" />
 
@@ -33,14 +33,23 @@
         android:text="@string/graphics"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-
-
     <TextView
-        android:id="@+id/version_tv"
+        android:id="@+id/Direction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:text="x.x" /> <!-- The Version will be set in java code -->
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="180dp"
+        android:paddingHorizontal="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/version_tv"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_alignParentBottom="true"-->
+    <!--        android:layout_alignParentLeft="true"-->
+    <!--        android:text="x.x" /> &lt;!&ndash; The Version will be set in java code &ndash;&gt;-->
 
 </RelativeLayout>
